Bug 202780 - Channel Mixer: Preview not updated when opening dialog
Summary: Channel Mixer: Preview not updated when opening dialog
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Editor-Channels (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-06 11:58 UTC by Simon
Modified: 2016-06-29 19:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon 2009-08-06 11:58:21 UTC
Version:           1.0.0-beta3 (using 4.2.4 (KDE 4.2.4), Debian packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.30-0.slh.3-sidux-686

Reproduce:
* Edit an image, chose different values in the Channel Mixer dialog (Ctrl H), save
* Edit an other image, open Channel Mixer again
Now the old values are still entered, but the preview is not updated until a value is changed.

This should imho be fixed in v1.0 too. An 1.0 is not worthy such a bug ;)
Comment 1 Marcel Wiesweg 2009-09-27 22:19:29 UTC
SVN commit 1028647 by mwiesweg:

Trigger effect from readSettings(), as done e.g. in curvesadjust.

BUG: 202780

 M  +2 -1      NEWS  
 M  +2 -0      imageplugins/channelmixer/channelmixertool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028647