Trigger effect from readSettings(), as done e.g. in curvesadjust.

BUG: 202780

svn path=/trunk/extragear/graphics/digikam/; revision=1028647